kubernetes/auth-server.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-server
  template:
    metadata:
      labels:
        app: auth-server
    spec:
      containers:
      - image: chasemoskal/auth-server:latest
        imagePullPolicy: IfNotPresent
        name: auth-server
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: auth-server-config-volume
          mountPath: /app/config
          readOnly: true
      volumes:
      - name: auth-server-config-volume
        secret:
          secretName: auth-server-config

---

apiVersion: v1
kind: Service
metadata:
  name: auth-server
spec:
  type: NodePort
  selector:
    app: auth-server
  ports:
  - name: auth-server
    port: 8000
    targetPort: 8000
    protocol: TCP
