kubernetes/profile-server.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: profile-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: profile-server
  template:
    metadata:
      labels:
        app: profile-server
    spec:
      containers:
      - image: chasemoskal/profile-server:latest
        imagePullPolicy: IfNotPresent
        name: profile-server
        ports:
        - containerPort: 8001
        volumeMounts:
        - name: profile-server-config-volume
          mountPath: /app/config
          readOnly: true
      volumes:
      - name: profile-server-config-volume
        secret:
          secretName: profile-server-config

---

apiVersion: v1
kind: Service
metadata:
  name: profile-server
spec:
  type: NodePort
  selector:
    app: profile-server
  ports:
  - name: profile-server
    port: 8001
    targetPort: 8001
    protocol: TCP
